# octoprint-cli

./: Cargo.toml  README.md  flake.nix
src/: job.rs  main.rs  printer.rs  system.rs  version.rs
src/printer/: bed.rs  printerhead.rs  sd.rs  tool.rs
